--- a/speed-scanr/package.json
+++ b/speed-scanr/package.json
@@ -7,15 +7,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.4.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "formik": "^2.2.9",
-    "hamburger-react": "^2.4.1",
     "next": "^12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.2.1",
-    "yup": "^0.32.11"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
