--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@tailwindcss/forms": "^0.4.0",
     "@typescript-eslint/parser": "^5.11.0",
     "formik": "^2.2.9",
